Bug 153617 - ICQ User information should not be modificable
Summary: ICQ User information should not be modificable
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Unmaintained
Component: ICQ and AIM Plugins (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR normal
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2007-12-07 16:07 UTC by FiNeX
Modified: 2007-12-08 21:19 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description FiNeX 2007-12-07 16:07:49 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

Some fields on the "ICQ User Information" are editable by the user, some other aren't. For example in the "Home info" tab, the "Country" combobox is editable and the other textbox aren't. 

Moreover the blocked fields shoud be "disabled", not only blocked.
Comment 1 Jan Ritzerfeld 2007-12-07 18:09:09 UTC
Is it possible to copy the content of disabled fields to clipboard?
Comment 2 FiNeX 2007-12-07 18:26:11 UTC
No.
Comment 3 Jan Ritzerfeld 2007-12-07 19:11:29 UTC
So that seems to be the reason that these fields are only blocked.
Comment 4 FiNeX 2007-12-07 19:25:57 UTC
Yes, but the main problem is not solved: there are some editable widgets that shouldn't (or not?).
Comment 5 Roman Jarosz 2007-12-07 20:21:34 UTC
The comboboxes are "editable" because of that, if we disable it, then combobox becomes gray and it's hard to read. I think it would be better if we show textbox instead of combobox in user info (not in own user info).

Don't know how hard it would be to change it dynamically at runtime.
Comment 6 John Tapsell 2007-12-07 23:23:35 UTC
Instead of disabling it, you can just set readOnly to true.
Comment 7 FiNeX 2007-12-07 23:48:03 UTC
Yes, you can set them readOnly.
Comment 8 Roman Jarosz 2007-12-08 21:19:24 UTC
SVN commit 746380 by rjarosz:

Fix bug 153617: ICQ User information should not be modificable
Add InfoComboBox which don't popup item list when it's in read only mode.

BUG: 153617



 M  +13 -6     icqgeneralinfo.ui  
 M  +9 -2      icqhomeinfowidget.ui  
 M  +11 -4     icqinterestinfowidget.ui  
 M  +13 -6     icqorgaffinfowidget.ui  
 M  +24 -0     icquserinfowidget.cpp  
 M  +9 -2      icqworkinfowidget.ui  


WebSVN link: http://websvn.kde.org/?view=rev&revision=746380