Fix bug 153617: ICQ User information should not be modificable Add InfoComboBox which don't popup item list when it's in read only mode.

BUG: 153617


svn path=/trunk/KDE/kdenetwork/kopete/; revision=746380